--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2314,13 +2314,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "0d95c137-edb0-4db0-9b91-98d04d99e41d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# if I could create a dict in which the keys were the usernames and the values\n",
-    "# were T"
+    "# were True, then I could search in the dict, and get a very fast response.\n",
+    "\n",
+    "# sets are the equivalent of a dict's keys\n",
+    "# - we can find them very quickly\n",
+    "# - sets also guarantee uniqueness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e08066a-208a-4a95-9ad2-25b2fa9caef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's take our list of usernames and turn it into a"
    ]
   }
  ],
