--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2548,11 +2548,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "5f28d573-8709-4bb7-8d54-da9178bb74a2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_accessoryupdater',\n",
+       " '_amavisd',\n",
+       " '_analyticsd',\n",
+       " '_aonsensed',\n",
+       " '_appinstalld',\n",
+       " '_appleevents',\n",
+       " '_applepay',\n",
+       " '_appowner',\n",
+       " '_appserver',\n",
+       " '_appstore',\n",
+       " '_ard',\n",
+       " '_assetcache',\n",
+       " '_astris',\n",
+       " '_atsserver',\n",
+       " '_audiomxd',\n",
+       " '_avbdeviced',\n",
+       " '_avphidbridge',\n",
+       " '_backgroundassets',\n",
+       " '_biome',\n",
+       " '_calendar',\n",
+       " '_captiveagent',\n",
+       " '_ces',\n",
+       " '_clamav',\n",
+       " '_cmiodalassistants',\n",
+       " '_coreaudiod',\n",
+       " '_coremediaiod',\n",
+       " '_coreml',\n",
+       " '_corespeechd',\n",
+       " '_ctkd',\n",
+       " '_cvmsroot',\n",
+       " '_cvs',\n",
+       " '_cyrus',\n",
+       " '_darwindaemon',\n",
+       " '_datadetectors',\n",
+       " '_demod',\n",
+       " '_devdocs',\n",
+       " '_devicemgr',\n",
+       " '_diagnosticservicesd',\n",
+       " '_diskimagesiod',\n",
+       " '_displaypolicyd',\n",
+       " '_distnote',\n",
+       " '_dovecot',\n",
+       " '_dovenull',\n",
+       " '_dpaudio',\n",
+       " '_driverkit',\n",
+       " '_eligibilityd',\n",
+       " '_eppc',\n",
+       " '_findmydevice',\n",
+       " '_fpsd',\n",
+       " '_ftp',\n",
+       " '_gamecontrollerd',\n",
+       " '_geod',\n",
+       " '_hidd',\n",
+       " '_iconservices',\n",
+       " '_installassistant',\n",
+       " '_installcoordinationd',\n",
+       " '_installer',\n",
+       " '_jabber',\n",
+       " '_kadmin_admin',\n",
+       " '_kadmin_changepw',\n",
+       " '_knowledgegraphd',\n",
+       " '_krb_anonymous',\n",
+       " '_krb_changepw',\n",
+       " '_krb_kadmin',\n",
+       " '_krb_kerberos',\n",
+       " '_krb_krbtgt',\n",
+       " '_krbfast',\n",
+       " '_krbtgt',\n",
+       " '_launchservicesd',\n",
+       " '_lda',\n",
+       " '_locationd',\n",
+       " '_logd',\n",
+       " '_lp',\n",
+       " '_mailman',\n",
+       " '_mbsetupuser',\n",
+       " '_mcxalr',\n",
+       " '_mdnsresponder',\n",
+       " '_mmaintenanced',\n",
+       " '_mobileasset',\n",
+       " '_mobilegestalthelper',\n",
+       " '_modelmanagerd',\n",
+       " '_mysql',\n",
+       " '_naturallanguaged',\n",
+       " '_nearbyd',\n",
+       " '_netbios',\n",
+       " '_netstatistics',\n",
+       " '_networkd',\n",
+       " '_neuralengine',\n",
+       " '_notification_proxy',\n",
+       " '_nsurlsessiond',\n",
+       " '_oahd',\n",
+       " '_ondemand',\n",
+       " '_postfix',\n",
+       " '_postgres',\n",
+       " '_qtss',\n",
+       " '_reportmemoryexception',\n",
+       " '_reportsystemmemory',\n",
+       " '_rmd',\n",
+       " '_sandbox',\n",
+       " '_screensaver',\n",
+       " '_scsd',\n",
+       " '_securityagent',\n",
+       " '_sntpd',\n",
+       " '_softwareupdate',\n",
+       " '_spotlight',\n",
+       " '_sshd',\n",
+       " '_svn',\n",
+       " '_swtransparencyd',\n",
+       " '_systemstatusd',\n",
+       " '_taskgated',\n",
+       " '_teamsserver',\n",
+       " '_terminusd',\n",
+       " '_timed',\n",
+       " '_timezone',\n",
+       " '_tokend',\n",
+       " '_trustd',\n",
+       " '_trustevaluationagent',\n",
+       " '_unknown',\n",
+       " '_update_sharing',\n",
+       " '_usbmuxd',\n",
+       " '_uucp',\n",
+       " '_warmd',\n",
+       " '_webauthserver',\n",
+       " '_windowserver',\n",
+       " '_www',\n",
+       " '_wwwproxy',\n",
+       " '_xserverdocs',\n",
+       " 'daemon',\n",
+       " 'nobody',\n",
+       " 'root'}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's get our usernames from /etc/passwd\n",
+    "\n",
+    "usernames = set([one_line.split(':')[0]\n",
+    " for one_line in open('/etc/passwd')\n",
+    " if not one_line.startswith('#')])\n",
+    "\n",
+    "usernames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "48e5abff-7946-4580-9f48-cd5b61d7632a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can create a set via a \"set comprehension\" very easily\n",
+    "# it's the same syntax as a list comprehension, *but* we use\n",
+    "# {} instead of []\n",
+    "\n",
+    "usernames = {one_line.split(':')[0]\n",
+    " for one_line in open('/etc/passwd')\n",
+    " if not one_line.startswith('#')}\n",
+    "\n",
+    "type(usernames)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "05ff2c51-8595-48da-bf0d-a6552d4b0409",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'nobody' in usernames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26615efb-6fad-40e5-88af-724b5a14d582",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# a set is like a dictionary without values\n"
+   ]
   }
  ],
  "metadata": {
