--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2754,13 +2754,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "26615efb-6fad-40e5-88af-724b5a14d582",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[80], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# a set is like a dictionary without values\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m {one_line\u001b[38;5;241m.\u001b[39msplit()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m one_line \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/etc/passwd\u001b[39m\u001b[38;5;124m'\u001b[39m)}\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
-    "# a set is like a dictionary without values\n"
+    "# a set is like a dictionary without values\n",
+    "\n",
+    "{one_line.split()\n",
+    "for one_line in open('/etc/passwd')}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "2695276b-a24a-4edf-8424-da60582fc5d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4025843321024852658"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae4e9bba-9011-42c6-82b1-8ccc552d090d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
