--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2799,12 +2799,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae4e9bba-9011-42c6-82b1-8ccc552d090d",
+   "cell_type": "markdown",
+   "id": "193e1843-dc3a-4156-8205-e6a2a063c1c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Sum unique numbers\n",
+    "\n",
+    "1. Ask the user to enter numbers, separated by whitespace\n",
+    "2. Ignore anything that doesn't contain only digits.\n",
+    "3. Print the sum, but only count each number once.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "    Enter numbers: 10 20 30 10 abc 20 30\n",
+    "    Total is 60\n",
+    "\n",
+    "Hint: Check out the `str.isdigit` method -- it returns `True` if a string contains    "
+   ]
   }
  ],
  "metadata": {
