--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2814,8 +2814,16 @@
     "    Enter numbers: 10 20 30 10 abc 20 30\n",
     "    Total is 60\n",
     "\n",
-    "Hint: Check out the `str.isdigit` method -- it returns `True` if a string contains    "
+    "Hint: Check out the `str.isdigit` method -- it returns `True` if a string contains only digits.    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af751cba-fdee-4804-a434-d5f982497717",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
