--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2819,8 +2819,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "af751cba-fdee-4804-a434-d5f982497717",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter numbers:  10 20 30 10 abc 20 30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = input('Enter numbers: ').strip()\n",
+    "\n",
+    "sum({int(one_number)\n",
+    "for one_number in text.split()\n",
+    "if one_number.isdigit()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e2e0a6-2281-44b5-b1ac-6fae25e0835a",
    "metadata": {},
    "outputs": [],
    "source": []
