--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2851,8 +2851,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "91e2e0a6-2281-44b5-b1ac-6fae25e0835a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter numbers:  1.2 3.4 5.6 7.8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0}"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's try to sum floats!\n",
+    "\n",
+    "text = input('Enter numbers: ').strip()\n",
+    "\n",
+    "def is_float(s):\n",
+    "    try:\n",
+    "        float(s)\n",
+    "    exc\n",
+    "\n",
+    "\n",
+    "sum({get_float_or_0(text)\n",
+    "for one_number in text.split()\n",
+    "if one_number.isdigit()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84b87a5-7c77-4a01-a99f-39f6862c2dc3",
    "metadata": {},
    "outputs": [],
    "source": []
