--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2851,28 +2851,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "91e2e0a6-2281-44b5-b1ac-6fae25e0835a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter numbers:  1.2 3.4 5.6 7.8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{0}"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's try to sum floats!\n",
     "\n",
@@ -2881,12 +2863,13 @@
     "def is_float(s):\n",
     "    try:\n",
     "        float(s)\n",
-    "    exc\n",
+    "        return True\n",
+    "    except:\n",
+    "        return False\n",
     "\n",
-    "\n",
-    "sum({get_float_or_0(text)\n",
+    "sum({float(one_number)\n",
     "for one_number in text.split()\n",
-    "if one_number.isdigit()})"
+    "if is_float(one_number)})"
    ]
   },
   {
