--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2851,10 +2851,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "91e2e0a6-2281-44b5-b1ac-6fae25e0835a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter numbers:  1.2 3.4 5.6 7.8 1.2 3.4 5.6 7.8 abc def ghi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "18.0"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# let's try to sum floats!\n",
     "\n",
@@ -2874,11 +2892,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "a84b87a5-7c77-4a01-a99f-39f6862c2dc3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# This is a comment\n",
+      "# You should ignore me\n",
+      "root:x:0:0:root:/root:/bin/bash\n",
+      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
+      "sync:x:4:65534:sync:/bin:/bin/sync\n",
+      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
+      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
+      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head linux-etc-passwd.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "938aec37-d670-409c-b95c-fcce44a9c0c6",
+   "metadata": {},
+   "source": [
+    "# Exercise: Different shells\n",
+    "\n",
+    "1. The file `linux-etc-passwd.txt` is a passwd file, but contains (a) lines with comments starting with `#` and also blank lines.\n",
+    "2. Return a set of the different shells that users have been assigned on this system."
+   ]
   }
  ],
  "metadata": {
