--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3119,9 +3119,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c769eaf8-8781-429e-a87f-3ddc0e43d5a6",
+   "metadata": {},
+   "source": [
+    "# Exercise: Usernames and shells\n",
+    "\n",
+    "Use a dict comprehension to iterate over `linux-etc-passwd.txt`. The resulting dict should have usernames as its keys and their shells as its values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e92c23b0-77d3-445f-80de-bd48f7bc2943",
+   "id": "787bbbc1-4448-439b-9b16-3392098a2a37",
    "metadata": {},
    "outputs": [],
    "source": []
