--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3130,8 +3130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "787bbbc1-4448-439b-9b16-3392098a2a37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'username': '/bin/false'}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    'username' :  one_line.strip().split(':')[-1]\n",
+    "    for one_line in open('linux-etc-passwd.txt')\n",
+    "    if not one_line.startswith(('#', '\\n'))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4f73e8-6bd9-488b-98ec-277be986008c",
    "metadata": {},
    "outputs": [],
    "source": []
