--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3130,24 +3130,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 111,
    "id": "787bbbc1-4448-439b-9b16-3392098a2a37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'username': '/bin/false'}"
+       "{'root': '/bin/bash',\n",
+       " 'daemon': '/usr/sbin/nologin',\n",
+       " 'bin': '/usr/sbin/nologin',\n",
+       " 'sys': '/usr/sbin/nologin',\n",
+       " 'sync': '/bin/sync',\n",
+       " 'games': '/usr/sbin/nologin',\n",
+       " 'man': '/usr/sbin/nologin',\n",
+       " 'lp': '/usr/sbin/nologin',\n",
+       " 'mail': '/usr/sbin/nologin',\n",
+       " 'news': '/usr/sbin/nologin',\n",
+       " 'uucp': '/usr/sbin/nologin',\n",
+       " 'proxy': '/usr/sbin/nologin',\n",
+       " 'www-data': '/usr/sbin/nologin',\n",
+       " 'backup': '/usr/sbin/nologin',\n",
+       " 'list': '/usr/sbin/nologin',\n",
+       " 'irc': '/usr/sbin/nologin',\n",
+       " 'gnats': '/usr/sbin/nologin',\n",
+       " 'nobody': '/usr/sbin/nologin',\n",
+       " 'syslog': '/bin/false',\n",
+       " 'messagebus': '/bin/false',\n",
+       " 'landscape': '/bin/false',\n",
+       " 'jci': '/bin/bash',\n",
+       " 'sshd': '/usr/sbin/nologin',\n",
+       " 'user': '/bin/bash',\n",
+       " 'reuven': '/bin/bash',\n",
+       " 'postfix': '/bin/false',\n",
+       " 'colord': '/bin/false',\n",
+       " 'postgres': '/bin/bash',\n",
+       " 'dovecot': '/bin/false',\n",
+       " 'dovenull': '/bin/false',\n",
+       " 'postgrey': '/bin/false',\n",
+       " 'debian-spamd': '/bin/sh',\n",
+       " 'memcache': '/bin/false',\n",
+       " 'genadi': '/bin/bash',\n",
+       " 'shira': '/bin/bash',\n",
+       " 'atara': '/bin/bash',\n",
+       " 'shikma': '/bin/bash',\n",
+       " 'amotz': '/bin/bash',\n",
+       " 'mysql': '/bin/false',\n",
+       " 'clamav': '/bin/false',\n",
+       " 'amavis': '/bin/sh',\n",
+       " 'opendkim': '/bin/false',\n",
+       " 'gitlab-redis': '/bin/nologin',\n",
+       " 'gitlab-psql': '/bin/sh',\n",
+       " 'git': '/bin/bash',\n",
+       " 'opendmarc': '/bin/false',\n",
+       " 'dkim-milter-python': '/bin/false',\n",
+       " 'deploy': '/bin/bash',\n",
+       " 'redis': '/bin/false'}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "{\n",
-    "    'username' :  one_line.strip().split(':')[-1]\n",
+    "    one_line.strip().split(':')[0] :  one_line.strip().split(':')[-1]\n",
     "    for one_line in open('linux-etc-passwd.txt')\n",
     "    if not one_line.startswith(('#', '\\n'))\n",
     "}"
@@ -3159,7 +3207,14 @@
    "id": "dc4f73e8-6bd9-488b-98ec-277be986008c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "{\n",
+    "    one_line.strip().split(':')[0] :  one_line.strip().split(':')[-1]\n",
+    "    for one_line in open('linux-etc-passwd.txt')\n",
+    "    if not one_line.startswith(('#', '\\n'))  and \n",
+    "       fields := one_line.strip().split(':')\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
