--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3277,8 +3277,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "8e5f4ebf-e63a-4163-aeca-9ac6cd7d7707",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'root': '/bin/bash',\n",
+       " 'daemon': '/usr/sbin/nologin',\n",
+       " 'bin': '/usr/sbin/nologin',\n",
+       " 'sys': '/usr/sbin/nologin',\n",
+       " 'sync': '/bin/sync',\n",
+       " 'games': '/usr/sbin/nologin',\n",
+       " 'man': '/usr/sbin/nologin',\n",
+       " 'lp': '/usr/sbin/nologin',\n",
+       " 'mail': '/usr/sbin/nologin',\n",
+       " 'news': '/usr/sbin/nologin',\n",
+       " 'uucp': '/usr/sbin/nologin',\n",
+       " 'proxy': '/usr/sbin/nologin',\n",
+       " 'www-data': '/usr/sbin/nologin',\n",
+       " 'backup': '/usr/sbin/nologin',\n",
+       " 'list': '/usr/sbin/nologin',\n",
+       " 'irc': '/usr/sbin/nologin',\n",
+       " 'gnats': '/usr/sbin/nologin',\n",
+       " 'nobody': '/usr/sbin/nologin',\n",
+       " 'syslog': '/bin/false',\n",
+       " 'messagebus': '/bin/false',\n",
+       " 'landscape': '/bin/false',\n",
+       " 'jci': '/bin/bash',\n",
+       " 'sshd': '/usr/sbin/nologin',\n",
+       " 'user': '/bin/bash',\n",
+       " 'reuven': '/bin/bash',\n",
+       " 'postfix': '/bin/false',\n",
+       " 'colord': '/bin/false',\n",
+       " 'postgres': '/bin/bash',\n",
+       " 'dovecot': '/bin/false',\n",
+       " 'dovenull': '/bin/false',\n",
+       " 'postgrey': '/bin/false',\n",
+       " 'debian-spamd': '/bin/sh',\n",
+       " 'memcache': '/bin/false',\n",
+       " 'genadi': '/bin/bash',\n",
+       " 'shira': '/bin/bash',\n",
+       " 'atara': '/bin/bash',\n",
+       " 'shikma': '/bin/bash',\n",
+       " 'amotz': '/bin/bash',\n",
+       " 'mysql': '/bin/false',\n",
+       " 'clamav': '/bin/false',\n",
+       " 'amavis': '/bin/sh',\n",
+       " 'opendkim': '/bin/false',\n",
+       " 'gitlab-redis': '/bin/nologin',\n",
+       " 'gitlab-psql': '/bin/sh',\n",
+       " 'git': '/bin/bash',\n",
+       " 'opendmarc': '/bin/false',\n",
+       " 'dkim-milter-python': '/bin/false',\n",
+       " 'deploy': '/bin/bash',\n",
+       " 'redis': '/bin/false'}"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict([\n",
+    "    one_line.strip().split(':')[0::6]\n",
+    "    for one_line in open('linux-etc-passwd.txt')\n",
+    "    if not one_line.startswith(('#', '\\n'))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fdb2cae-c293-41cf-b4ce-9f74da80e164",
    "metadata": {},
    "outputs": [],
    "source": []
