--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3350,8 +3350,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "3fdb2cae-c293-41cf-b4ce-9f74da80e164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nested comprehensions\n",
+    "\n",
+    "mylist = [[10, 20, 30], [40, 45], [50, 55, 60, 65, 70, 75], [80, 85, 95, 105]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "18d54aef-80e9-4796-8923-c1c3f9e1546f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 95, 105]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how can I get one list of numbers back from this?\n",
+    "\n",
+    "[one_item\n",
+    "for one_sublist in mylist\n",
+    "for one_item in one_sublist]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f1d44e2-c9c3-448b-8027-79dd13ee7f1a",
    "metadata": {},
    "outputs": [],
    "source": []
