--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3392,6 +3392,43 @@
    "id": "1f1d44e2-c9c3-448b-8027-79dd13ee7f1a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "[one_item for one_sublist in mylist for one_item in one_sublist]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "05d4c945-ceee-4c50-a655-04ed7d5c0d05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[55, 65, 75, 85, 95, 105]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "[one_item\n",
+    "for one_sublist in mylist\n",
+    " if len(one_sublist) > 2   # long sublists\n",
+    "for one_item in one_sublist\n",
+    "if one_item % 2]     # odd numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2895883b-b0f4-446e-a4be-30b355156b5c",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
