--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3424,12 +3424,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "059d3cef-6d76-4083-a8a5-07b165863077",
+   "metadata": {},
+   "source": [
+    "# When to use a nested comprehension?\n",
+    "\n",
+    "1. You have an iterable\n",
+    "2. The elements of of the iterable are also iterable\n",
+    "3. You might want to filter either the main or secondary iterable's elements\n",
+    "4. The expression can use any of the loop variables you created in the interim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "d2a72caf-028f-4d3b-bf48-5edf8bbcb692",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0),\n",
+       " (0, 1),\n",
+       " (0, 2),\n",
+       " (0, 3),\n",
+       " (0, 4),\n",
+       " (0, 5),\n",
+       " (0, 6),\n",
+       " (0, 7),\n",
+       " (0, 8),\n",
+       " (0, 9),\n",
+       " (1, 0),\n",
+       " (1, 1),\n",
+       " (1, 2),\n",
+       " (1, 3),\n",
+       " (1, 4),\n",
+       " (1, 5),\n",
+       " (1, 6),\n",
+       " (1, 7),\n",
+       " (1, 8),\n",
+       " (1, 9),\n",
+       " (2, 0),\n",
+       " (2, 1),\n",
+       " (2, 2),\n",
+       " (2, 3),\n",
+       " (2, 4),\n",
+       " (2, 5),\n",
+       " (2, 6),\n",
+       " (2, 7),\n",
+       " (2, 8),\n",
+       " (2, 9),\n",
+       " (3, 0),\n",
+       " (3, 1),\n",
+       " (3, 2),\n",
+       " (3, 3),\n",
+       " (3, 4),\n",
+       " (3, 5),\n",
+       " (3, 6),\n",
+       " (3, 7),\n",
+       " (3, 8),\n",
+       " (3, 9),\n",
+       " (4, 0),\n",
+       " (4, 1),\n",
+       " (4, 2),\n",
+       " (4, 3),\n",
+       " (4, 4),\n",
+       " (4, 5),\n",
+       " (4, 6),\n",
+       " (4, 7),\n",
+       " (4, 8),\n",
+       " (4, 9),\n",
+       " (5, 0),\n",
+       " (5, 1),\n",
+       " (5, 2),\n",
+       " (5, 3),\n",
+       " (5, 4),\n",
+       " (5, 5),\n",
+       " (5, 6),\n",
+       " (5, 7),\n",
+       " (5, 8),\n",
+       " (5, 9),\n",
+       " (6, 0),\n",
+       " (6, 1),\n",
+       " (6, 2),\n",
+       " (6, 3),\n",
+       " (6, 4),\n",
+       " (6, 5),\n",
+       " (6, 6),\n",
+       " (6, 7),\n",
+       " (6, 8),\n",
+       " (6, 9),\n",
+       " (7, 0),\n",
+       " (7, 1),\n",
+       " (7, 2),\n",
+       " (7, 3),\n",
+       " (7, 4),\n",
+       " (7, 5),\n",
+       " (7, 6),\n",
+       " (7, 7),\n",
+       " (7, 8),\n",
+       " (7, 9),\n",
+       " (8, 0),\n",
+       " (8, 1),\n",
+       " (8, 2),\n",
+       " (8, 3),\n",
+       " (8, 4),\n",
+       " (8, 5),\n",
+       " (8, 6),\n",
+       " (8, 7),\n",
+       " (8, 8),\n",
+       " (8, 9),\n",
+       " (9, 0),\n",
+       " (9, 1),\n",
+       " (9, 2),\n",
+       " (9, 3),\n",
+       " (9, 4),\n",
+       " (9, 5),\n",
+       " (9, 6),\n",
+       " (9, 7),\n",
+       " (9, 8),\n",
+       " (9, 9)]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(x,y)\n",
+    "for x in range(10)\n",
+    "for y in range(10)]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2895883b-b0f4-446e-a4be-30b355156b5c",
+   "id": "dcc51d72-a11c-4071-91bd-e9ca7deb44ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[(x,y)\n",
+    "for x in range(10)\n",
+    "for y in range(10)]"
+   ]
   }
  ],
  "metadata": {
