--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3560,14 +3560,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "dcc51d72-a11c-4071-91bd-e9ca7deb44ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0),\n",
+       " (2, 0),\n",
+       " (2, 1),\n",
+       " (3, 0),\n",
+       " (3, 1),\n",
+       " (3, 2),\n",
+       " (4, 0),\n",
+       " (4, 1),\n",
+       " (4, 2),\n",
+       " (4, 3),\n",
+       " (5, 0),\n",
+       " (5, 1),\n",
+       " (5, 2),\n",
+       " (5, 3),\n",
+       " (5, 4),\n",
+       " (6, 0),\n",
+       " (6, 1),\n",
+       " (6, 2),\n",
+       " (6, 3),\n",
+       " (6, 4),\n",
+       " (6, 5),\n",
+       " (7, 0),\n",
+       " (7, 1),\n",
+       " (7, 2),\n",
+       " (7, 3),\n",
+       " (7, 4),\n",
+       " (7, 5),\n",
+       " (7, 6),\n",
+       " (8, 0),\n",
+       " (8, 1),\n",
+       " (8, 2),\n",
+       " (8, 3),\n",
+       " (8, 4),\n",
+       " (8, 5),\n",
+       " (8, 6),\n",
+       " (8, 7),\n",
+       " (9, 0),\n",
+       " (9, 1),\n",
+       " (9, 2),\n",
+       " (9, 3),\n",
+       " (9, 4),\n",
+       " (9, 5),\n",
+       " (9, 6),\n",
+       " (9, 7),\n",
+       " (9, 8)]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[(x,y)\n",
     "for x in range(10)\n",
-    "for y in range(10)]"
+    "for y in range(x)]   # y will never be >= x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721c140a-bcb6-429f-8588-6c8c5d4e39ec",
+   "metadata": {},
+   "source": [
+    "# Generator expressions\n",
+    "\n",
+    "The good news with comprehensions: They're useful and not too hard\n",
+    "\n",
+    "The bad news: We can easily create huge data structures that consume lots of memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5c7c913-f0db-48b2-9856-6544e04837f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if I want to read from a file, I could say\\\n",
+    "\n",
+    "open(filename).read()   # but this is super dangerous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f3b412-7bdd-401f-a757-378b3c1a10b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for one_line in o"
    ]
   }
  ],
