--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3656,8 +3656,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for one_line in o"
+    "for one_line in open(filename):\n",
+    "    # this is fine, even for a 10 TB file!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "65d1467e-1275-4032-baa8-cb6cdf13c66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I'd like to have a comprehension that doesn't return a list, \n",
+    "# which could be huge, but rather a generator, that only\n",
+    "# returns a new value when I ask for it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "a2f39352-801a-4546-a77d-0069b9c48e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what do I get from this?\n",
+    "\n",
+    "type([one_number ** 2\n",
+    "for one_number in numbers])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "79838d34-b2e0-4b33-bbf6-35420580c514",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what if I use ()\n",
+    "\n",
+    "type((one_number ** 2\n",
+    "for one_number in numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "e4c79a6c-1e70-4147-91f6-eb3ea4476c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x1114fa400>"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(one_number ** 2\n",
+    "for one_number in numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2effc3e-b606-452f-9a17-d93f56fa22f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
