--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3744,11 +3744,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "e2effc3e-b606-452f-9a17-d93f56fa22f8",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, int found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[131], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m mylist \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m30\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m*\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmylist\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, int found"
+     ]
+    }
+   ],
+   "source": [
+    "mylist = [10, 20, 30]\n",
+    "\n",
+    "'*'.join(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "541c72f8-9614-4ac5-bd66-7e5d0e0a941e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10*20*30'"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = [10, 20, 30]\n",
+    "\n",
+    "'*'.join([str(one_item)\n",
+    "          for one_item in mylist])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "7c3cb6fd-c4b7-49bf-b81a-45465f50f779",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10*20*30'"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now we use a generator expression\n",
+    "mylist = [10, 20, 30]\n",
+    "\n",
+    "'*'.join((str(one_item)\n",
+    "          for one_item in mylist))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b15bbf5a-ff98-497a-8e37-19339c304b4e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# whenever you see this form, you can actually remove one layer of parentheses\n",
+    "\n",
+    "'*'.join(str(one_item)\n",
+    "          for one_item in mylist)  # if you see a comprehension-like thing in a function call..."
+   ]
   }
  ],
  "metadata": {
