--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -3817,16 +3817,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "b15bbf5a-ff98-497a-8e37-19339c304b4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10*20*30'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# whenever you see this form, you can actually remove one layer of parentheses\n",
     "\n",
     "'*'.join(str(one_item)\n",
     "          for one_item in mylist)  # if you see a comprehension-like thing in a function call..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "d5c2a151-6598-4879-a30b-a6768c7e28b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(a_list):\n",
+    "    '*'.join(str(one_item)\n",
+    "              for one_item in a_list) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "afbc7342-c071-495d-a054-cf25ebbb7cc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1           RESUME                   0\n",
+      "\n",
+      "  2           LOAD_CONST               1 ('*')\n",
+      "              LOAD_ATTR                1 (join + NULL|self)\n",
+      "              LOAD_CONST               2 (<code object <genexpr> at 0x111fdc930, file \"/var/folders/n7/3xckdj8j3dz45qz4xnlk1fy40000gn/T/ipykernel_13278/4248431824.py\", line 2>)\n",
+      "              MAKE_FUNCTION\n",
+      "\n",
+      "  3           LOAD_FAST                0 (a_list)\n",
+      "              GET_ITER\n",
+      "\n",
+      "  2           CALL                     0\n",
+      "              CALL                     1\n",
+      "              POP_TOP\n",
+      "              RETURN_CONST             0 (None)\n",
+      "\n",
+      "Disassembly of <code object <genexpr> at 0x111fdc930, file \"/var/folders/n7/3xckdj8j3dz45qz4xnlk1fy40000gn/T/ipykernel_13278/4248431824.py\", line 2>:\n",
+      "   2           RETURN_GENERATOR\n",
+      "               POP_TOP\n",
+      "       L1:     RESUME                   0\n",
+      "               LOAD_FAST                0 (.0)\n",
+      "\n",
+      "   3           GET_ITER\n",
+      "       L2:     FOR_ITER                16 (to L3)\n",
+      "               STORE_FAST               1 (one_item)\n",
+      "\n",
+      "   2           LOAD_GLOBAL              1 (str + NULL)\n",
+      "               LOAD_FAST                1 (one_item)\n",
+      "               CALL                     1\n",
+      "               YIELD_VALUE              0\n",
+      "               RESUME                   5\n",
+      "               POP_TOP\n",
+      "               JUMP_BACKWARD           18 (to L2)\n",
+      "\n",
+      "   3   L3:     END_FOR\n",
+      "               POP_TOP\n",
+      "               RETURN_CONST             0 (None)\n",
+      "\n",
+      "  --   L4:     CALL_INTRINSIC_1         3 (INTRINSIC_STOPITERATION_ERROR)\n",
+      "               RERAISE                  1\n",
+      "ExceptionTable:\n",
+      "  L1 to L4 -> L4 [0] lasti\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.dis(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0588cfc5-1cca-4c83-b9b5-0864f7c525b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
